change fabric installation

--- a/network-files/docker-compose.yml
+++ b/network-files/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   ca.org1.example.com:
-    image: hyperledger/fabric-ca:$IMAGE_TAG
+    image: hyperledger/fabric-ca:1.5
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca.org1.example.com
